update head comment

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--
+      (c) Copyright 2020 Siraj Chokshi.
+  -->
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
