add Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,16 @@
     -->
     <link rel="manifest" href="manifest.json" />
     <script src="https://kit.fontawesome.com/c42824823d.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127113401-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-127113401-2');
+    </script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
